<resources>
    <string name="app_name">AWords</string>
    <string name="home_button_choose_file">Open File</string>
    <string name="home_button_copy_text">From Clipboard</string>
    <string name="synonyms">Synonyms</string>
    <string name="antonyms">Antonyms</string>
    <string name="rhymes">Rhymes</string>
    <string name="document_provider_root_summary">Document provider root summary.</string>
    <string name="document_provider_title">My Documents</string>
    <string name="button_create_new_file">New File</string>
    <string name="bottom_nav_menu_first">Randomize</string>
    <string name="bottom_nav_menu_second">Autocomplete</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
</resources>
